RESOLVED FIXED168421
<input type=color readonly> doesn't act per spec
https://bugs.webkit.org/show_bug.cgi?id=168421
Summary <input type=color readonly> doesn't act per spec
Simon Pieters (:zcorpan)
Reported 2017-02-16 04:53:26 PST
(This issue for Chromium was fixed in 2013: https://bugs.chromium.org/p/chromium/issues/detail?id=249515 ) TESTCASE: http://software.hixie.ch/utilities/js/live-dom-viewer/?saved=2319 The "readonly" attribute on <input type=color> is supposed to be ignored, but WebKit makes it stop popping up the color picker yet without making the control stop being interactive, so it just looks broken. In Chromium/Gecko/Edge/HTML standard, readonly does not apply to type=color. [[ The following content attributes must not be specified and do not apply to the element: ... readonly, ... ]] https://html.spec.whatwg.org/#color-state-(type=color)
Attachments
Patch (7.50 KB, patch)
2017-02-18 22:03 PST, Chris Dumez
no flags
Archive of layout-test-results from ews115 for mac-elcapitan (1.71 MB, application/zip)
2017-02-19 01:21 PST, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (842.33 KB, application/zip)
2017-02-19 01:22 PST, Build Bot
no flags
Patch (9.36 KB, patch)
2017-02-19 16:11 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2017-02-18 15:12:06 PST
Chris Dumez
Comment 2 2017-02-18 22:03:33 PST
Build Bot
Comment 3 2017-02-19 01:21:25 PST
Comment on attachment 302068 [details] Patch Attachment 302068 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/3153237 New failing tests: fast/forms/color/input-color-readonly.html
Build Bot
Comment 4 2017-02-19 01:21:29 PST
Created attachment 302070 [details] Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5 2017-02-19 01:22:37 PST
Comment on attachment 302068 [details] Patch Attachment 302068 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3153242 New failing tests: fast/forms/color/input-color-readonly.html
Build Bot
Comment 6 2017-02-19 01:22:41 PST
Created attachment 302071 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Chris Dumez
Comment 7 2017-02-19 16:11:00 PST
WebKit Commit Bot
Comment 8 2017-02-19 16:48:11 PST
Comment on attachment 302097 [details] Patch Clearing flags on attachment: 302097 Committed r212617: <http://trac.webkit.org/changeset/212617>
WebKit Commit Bot
Comment 9 2017-02-19 16:48:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.